--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "scripts": {
     "build:aot:prod": "npm run clean:dist && npm run clean:aot && cross-env BUILD_AOT=1 npm run webpack -- --config config/webpack.prod.js  --progress --profile --bail",
     "build:aot": "npm run build:aot:prod",
-    "build:aot:sim": "gulp build && npm run build:aot:prod -- --env.sim",
     "build:dev": "npm run clean:dist && npm run webpack -- --config config/webpack.dev.js --progress --profile",
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
     "build:prod": "npm run clean:dist && npm run webpack -- --config config/webpack.prod.js  --progress --profile --bail",
@@ -37,6 +36,16 @@
     "github-deploy:dev": "npm run webpack -- --config config/webpack.github-deploy.js --progress --profile --env.githubDev",
     "github-deploy:prod": "npm run webpack -- --config config/webpack.github-deploy.js --progress --profile --env.githubProd",
     "github-deploy": "npm run github-deploy:dev",
+    "gulp": "gulp",
+    "jest": "jest",
+
+    "lib:build": "gulp build",
+    "lib:build:sim": "gulp build && npm run build:aot:prod -- --env.sim",
+    "lib:test": "npm run jest -- --config jest.library.config.json",
+    "lib:test:watch": "npm run jest -- --config jest.library.config.json --watch",
+    "lib:start:sim": "gulp build && npm run server:dev -- --env.sim",
+    "lib:sync": "gulp misc:syncConfig",
+
     "lint": "npm run tslint \"src/**/*.ts\"",
     "node": "node",
     "postinstall": "npm run webdriver:update",
@@ -49,12 +58,10 @@
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "npm run webpack-dev-server -- --config config/webpack.dev.js --open --progress --profile --watch --content-base src/",
-    "server:sim": "gulp build && npm run server:dev -- --env.sim",
     "server:prod": "http-server dist -c-1 --cors",
     "server:prod:ci": "http-server dist -p 3000 -c-1 --cors",
     "server": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
-    "start:sim": "npm run server:sim",
     "start": "npm run server:dev",
     "test": "npm run lint && karma start",
     "tslint": "tslint",
