--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       ],
       "my-lib/src/*": [
         "my-lib/src/*"
+      ],
+      "@*": [
+        "demo/modules/@*"
       ]
     }
   },
