--- a/package.json
+++ b/package.json
@@ -77,33 +77,33 @@
     "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
   },
   "devDependencies": {
-    "@angular/animations": "^4.2.3",
-    "@angular/common": "^4.2.3",
-    "@angular/compiler": "^4.2.3",
-    "@angular/compiler-cli": "^4.2.3",
-    "@angular/core": "^4.2.3",
-    "@angular/forms": "^4.2.3",
-    "@angular/http": "^4.2.3",
-    "@angular/platform-browser": "^4.2.3",
-    "@angular/platform-browser-dynamic": "^4.2.3",
-    "@angular/platform-server": "^4.2.3",
-    "@angular/router": "^4.2.3",
+    "@angular/animations": "^4.3.1",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/compiler-cli": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/platform-server": "^4.3.1",
+    "@angular/router": "^4.3.1",
     "@angularclass/hmr": "~1.2.2",
-    "@angularclass/hmr-loader": "~3.0.2",
+    "@angularclass/hmr-loader": "^3.0.4",
     "@types/chalk": "^0.4.31",
     "@types/deep-equal": "^0.0.30",
     "@types/del": "^2.2.32",
     "@types/gulp": "^4.0.4",
-    "@types/hammerjs": "^2.0.33",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.45",
     "@types/jest": "^19.2.3",
     "@types/mkdirp": "^0.3.29",
-    "@types/node": "^7.0.13",
+    "@types/node": "^7.0.39",
     "@types/rollup": "^0.41.0",
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.6.28",
     "@types/voca": "^1.2.0",
-    "@types/webpack": "^2.2.15",
+    "@types/webpack": "^2.2.16",
     "add-asset-html-webpack-plugin": "^1.0.2",
     "angular2-template-loader": "^0.6.2",
     "assets-webpack-plugin": "^3.5.1",
@@ -126,6 +126,8 @@
     "fs-extra": "^2.0.0",
     "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-conventional-changelog": "^1.1.3",
+    "gulp-git": "^2.4.1",
     "gulp-rename": "^1.2.2",
     "gulpclass": "^0.1.2",
     "html-webpack-plugin": "^2.28.0",
@@ -146,11 +148,11 @@
     "karma-mocha-reporter": "^2.2.3",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "~2.0.3",
+    "karma-webpack": "^2.0.4",
     "mkdirp": "^0.5.1",
     "mv": "^2.1.1",
     "ng-router-loader": "^2.1.0",
-    "ngc-webpack": "^3.0.0",
+    "ngc-webpack": "^3.2.0",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "optimize-js-plugin": "0.0.4",
@@ -166,21 +168,21 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.4.1",
+    "rxjs": "^5.4.3",
     "sass-loader": "^6.0.3",
-    "script-ext-html-webpack-plugin": "^1.7.1",
+    "script-ext-html-webpack-plugin": "^1.8.5",
     "sorcery": "^0.10.0",
     "source-map-loader": "^0.2.1",
     "string-replace-loader": "~1.2.0",
     "style-loader": "^0.18.1",
     "to-string-loader": "^1.1.5",
-    "ts-node": "^3.0.2",
+    "ts-node": "^3.3.0",
     "tsconfig": "^6.0.0",
-    "tslib": "^1.6.1",
+    "tslib": "^1.7.1",
     "tslint": "~4.5.1",
     "tslint-loader": "^3.5.2",
     "typedoc": "^0.7.1",
-    "typescript": "2.4.0",
+    "typescript": "~2.5.2",
     "uglify-js": "^3.0.4",
     "url-loader": "^0.5.8",
     "vinyl-buffer": "^1.0.0",
@@ -191,7 +193,7 @@
     "webpack-dev-server": "~2.4.2",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
     "webpack-merge": "~4.1.0",
-    "zone.js": "^0.8.12"
+    "zone.js": "0.8.14"
   },
   "repository": {
     "type": "git",
