refactor: upgrade to angular v5

--- a/examples/extensions/src/@corp/common/package.json
+++ b/examples/extensions/src/@corp/common/package.json
@@ -3,7 +3,6 @@
   "description": "Common Library",
   "keywords": [ "corp", "common" ],
   "libConfig": {
-    "entry": "common",
-    "inlineResources": true
+    "entry": "common"
   }
 }
