--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
     "mkdirp": "^0.5.1",
     "mv": "^2.1.1",
     "ng-router-loader": "^2.1.0",
-    "ngc-webpack": "^4.1.0",
+    "ngc-webpack": "4.1.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "optimize-js-plugin": "0.0.4",
